--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
    
 <h1>To jest nagłówek nr 1</h1>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, at?</p>
 </body>
 
 </html>
